# GroceryTycoon

./: Cargo.toml  README.md  credits.md  credits.txt  eastereggs.md  eastereggs.txt  todolist.md  todolist.txt
res/: logo.xcf  settings.json  test.gtsave
res/textures/LibreSprite/: cursors.ase  floortile.ase  tilehighlight.ase
src/: main.rs  settingsfileload.rs
