[package]
name = "grocerytycoon"
version = "0.0.2"
authors = ["ClosedGL"]
edition = "2018"

description = "Grocery store management game"
keywords = ["games", "game", "tycoon", "sdl2"]

[dependencies]
sdl2 = "0.34.3"
sdl2-sys = "0.34.3"
serde = "1.0.123"
serde_json = "1.0.62"
serde_derive = "1.0.123"
